chore: add test-results and playwright-mcp to gitignore
- Add test-results/ directory to ignore test output files
- Add .playwright-mcp/ directory to ignore Playwright MCP files

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ jspm_packages/
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+# Test results and Playwright
+test-results/
+.playwright-mcp/
