--- a/.gitignore
+++ b/.gitignore
@@ -90,8 +90,8 @@ jspm_packages/
 # FuseBox cache
 .fusebox/
 
-# DynamoDB Local files
-.dynamodb/
+# DynamoDB Local files (removed - not needed for frontend portfolio)
+# .dynamodb/
 
 # TernJS port file
 .tern-port
