--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Dependencies
 node_modules/
+package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -37,6 +38,9 @@ Thumbs.db
 .claude/
 .mcp.json
 CLAUDE.md
+
+# Local tooling
+.chunkhound/
 
 # Logs
 logs
