--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "steven-portfolio",
   "version": "1.0.0",
-  "description": "Portfolio website of Steven Coaila Zaa - Full Stack Developer specializing in React, Swift, and modern web/mobile development",
+  "description": "Portfolio website of Steven Coaila Zaa - Full Stack Developer built with Vue 3, Vite, GSAP, and Three.js",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
@@ -9,34 +9,23 @@
     "preview": "vite preview",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext js,jsx --report-unused-disable-directives --fix",
+    "lint": "eslint . --ext js,vue --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext js,vue --report-unused-disable-directives --fix",
     "test": "vitest",
     "test:run": "vitest run --passWithNoTests"
   },
   "dependencies": {
-    "@dr.pogodin/react-helmet": "^3.0.2",
-    "@gsap/react": "^2.1.2",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.540.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "react-intersection-observer": "^9.16.0",
     "three": "^0.179.1",
-    "typed.js": "^2.1.0"
+    "typed.js": "^2.1.0",
+    "lucide-vue-next": "0.562.0",
+    "vue": "3.5.26"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.7.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.1",
+    "@vitejs/plugin-vue": "^6.0.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-vue": "10.4.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.7.4",
     "rollup-plugin-visualizer": "^6.0.3",
@@ -46,7 +35,7 @@
   },
   "keywords": [
     "portfolio",
-    "react",
+    "vue",
     "gsap",
     "frontend",
     "fullstack"
