docs(seo): align metadata with Vue 3 stack

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Steven Coaila Zaa - Portfolio",
   "short_name": "Steven ACZ",
-  "description": "Full Stack Developer Portfolio - React, Swift, and modern web/mobile development",
+  "description": "Full Stack Developer Portfolio - Vue 3, GSAP, Three.js, and modern web/mobile development",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0a0a0a",
